chore(config): Updating the gatsby config page
Updating my start up configuration to server-side render the projects pages.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.22.5",
     "@mantine/code-highlight": "^7.11.2",
     "@mantine/core": "^7.11.2",
     "@mantine/form": "^7.11.2",
@@ -26,6 +27,7 @@
     "@tiptap/starter-kit": "^2.5.0",
     "another-random-package": "^1.0.2",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.2",
     "gatsby": "^5.13.5",
     "gatsby-plugin-image": "^3.13.1",
@@ -36,6 +38,7 @@
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-source-contentful": "^8.13.2",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-json": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
